fix(content): highlight content with white background

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -17,6 +17,10 @@ div[ng-view] {
     font-weight: inherit;
     margin: 0px;
   }
+
+  .md-whiteframe-z1.padding {
+    background-color: white;
+  }
 }
 
 a {
