--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -48,3 +48,25 @@ md-sidenav {
   }
 
 }
+
+md-menu-item {
+  background: #eee;
+}
+
+md-collapse-menu-item {
+
+  ul {
+    position: relative;
+    overflow: hidden;
+    transition: height 0.6s cubic-bezier(0.35, 0, 0.25, 1);
+    max-width: 100%;
+
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
+    &.no-transition {
+      transition: none !important;
+    }
+  }
+}
