feat(): change indention of collapsed-menu-items to highlight them

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -53,6 +53,12 @@ md-menu-item {
   background: #eee;
 }
 
+.collapsed-menu-item {
+  .md-button {
+    padding-left: 32px;
+  }
+}
+
 md-collapse-menu-item {
 
   ul {
