--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -32,7 +32,6 @@ a {
   color: grey;
 }
 
-
 md-sidenav {
 
   .brand {
@@ -56,11 +55,17 @@ md-menu-item {
 md-collapse-menu-item {
 
   ul {
+
+    .md-button {
+      padding: 0 16px 0 32px;
+      text-overflow: hidden;
+      word-break: keep-all;
+    }
+
     position: relative;
     overflow: hidden;
     transition: height 0.6s cubic-bezier(0.35, 0, 0.25, 1);
     max-width: 100%;
-
     margin: 0;
     padding: 0;
     list-style: none;
@@ -87,5 +92,4 @@ div[marked] {
     background-color: #f7f7f7;
     border-radius: 3px;
   }
-
 }
