update(): update autoprefixer and fix design for squash tutorial.
- Register Squash Tutorial
- Autoprefixer
- Update Content of Squash
- Added `Pre` styling

Closes #59

--- a/src/partials/guide.tmpl.html
+++ b/src/partials/guide.tmpl.html
@@ -5,7 +5,7 @@
 </md-toolbar>
 <div class="md-whiteframe-z1 padding">
 
-  <div ng-if="!error" marked src="path">
+  <div class="guide-markdown" ng-if="!error" marked src="path">
   </div>
 
   <div ng-if="error">
