neue anleitung für ncdu

--- a/src/partials/404.tmpl.html
+++ b/src/partials/404.tmpl.html
@@ -10,7 +10,7 @@
   </p>
 
   <p>
-    <md-button class="md-raised md-primary" ng-href="#/">Zurück zur Startseite</md-button>
+    <md-button class="md-raised md-primary" ng-href="#!/">Zurück zur Startseite</md-button>
   </p>
 
 </div>
