--- a/src/partials/guide.tmpl.html
+++ b/src/partials/guide.tmpl.html
@@ -12,7 +12,7 @@
     {{ error }}
 
     <p>
-      <md-button class="md-raised md-primary" ng-href="#/">Zurück zur Startseite</md-button>
+      <md-button class="md-raised md-primary" ng-href="#!/">Zurück zur Startseite</md-button>
     </p>
   </div>
 
